# fastapi-task-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  justfile  pyproject.toml
app/: main.py
app/core/: config.py
app/crud/: tasks.py
app/db/: database.py
app/models/: task_model.py
app/routers/: tasks.py
app/schemas/: taskbase.py
just/: app.just
just/app/: docker.just  main.just  simple.just
tests/: conftest.py  test_database.py  test_debug.py  test_main.py  test_simple.py  test_sqlite.py  test_tasks.py
