[project]
name = "fastapi-task-manager"
version = "0.1.0"
description = "A modern FastAPI task management system with PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.1",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

# Добавляем эту секцию для исправления ошибки
[tool.setuptools]
# Вариант 1: Явное указание пакетов
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "scripts*", "just*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "flake8>=6.1.0",
    "sqlalchemy-utils>=0.41.2",
    "python-multipart>=0.0.20",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.taskipy.tasks]
test = "pytest -x"
test-cov = "pytest --cov=app --cov-report=html"
test-fast = "pytest -x --tb=no -q"